# fhog

./: CMakeLists.txt  README.md  frameUtils.cpp  learnRobot.cpp
dataset/: removeUselessImages.py  testing.xml  training.xml
dlib-19.4-modified/dlib/: image_transforms.h
dlib-19.4-modified/dlib/image_processing/: scan_fhog_pyramid.h
dlib-19.4-modified/dlib/image_transforms/: fhog_hack.h  frameUtils.hpp  hogBackend.hpp  simdUtils.hpp
dlib-19.4-modified/dlib/svm/: cross_validate_object_detection_trainer.h
